--- a/December22/12-31-22.html
+++ b/December22/12-31-22.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - wiki</title>
+        <title>Saturday, December 31, 2022 - wiki</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -34,7 +34,7 @@
     <body>
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -80,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-30-22.html"><strong aria-hidden="true">1.4.</strong> Friday, December 30, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-31-22.html"><strong aria-hidden="true">1.5.</strong> Saturday, December 31, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-30-22.html"><strong aria-hidden="true">1.4.</strong> Friday, December 30, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-31-22.html" class="active"><strong aria-hidden="true">1.5.</strong> Saturday, December 31, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -112,7 +112,7 @@
                     <h1 class="menu-title">wiki</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -141,27 +141,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">INTRODUCTION</a></h1>
-<p>Inspiration from <a href="https://mobile.twitter.com/ricemaximalist">RiceMaximalist</a> journal <a href="https://rice-daily.super.site/">rice-daily.super.site</a></p>
-<h1 id="rust-snippets"><a class="header" href="#rust-snippets">Rust snippets</a></h1>
-<pre><pre class="playground"><code class="language-rust">// format strings with [] and ()
-fn main() {
-    let inputs = [&quot;string1&quot;, &quot;string2&quot;, &quot;string3&quot;];
-
-    for input in &amp;inputs {
-        let output = format!(&quot; - [{input}] ({input})&quot;);
-        println!(&quot;{output}&quot;);
-    }
-}</code></pre></pre>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-
-                            <a rel="next" href="December22/December22.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
+                            <a rel="prev" href="../December22/12-30-22.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
                             </a>
+
 
                         <div style="clear: both"></div>
                     </nav>
@@ -169,10 +157,10 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-
-                    <a rel="next" href="December22/December22.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
+                    <a rel="prev" href="../December22/12-30-22.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
                     </a>
+
             </nav>
 
         </div>
@@ -185,13 +173,13 @@ fn main() {
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
