--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-30-22.html"><strong aria-hidden="true">1.4.</strong> Friday, December 30, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-31-22.html"><strong aria-hidden="true">1.5.</strong> Saturday, December 31, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">Introduction</a></li><li class="chapter-item expanded "><a href="January23/January23.html"><strong aria-hidden="true">1.</strong> January 2023</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="January23/1-1-23.html"><strong aria-hidden="true">1.1.</strong> Sunday, January 1, 2023</a></li></ol></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">2.</strong> December 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">2.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">2.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">2.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-30-22.html"><strong aria-hidden="true">2.4.</strong> Friday, December 30, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-31-22.html"><strong aria-hidden="true">2.5.</strong> Saturday, December 31, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -159,7 +159,7 @@ fn main() {
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next" href="December22/December22.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="January23/January23.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -170,7 +170,7 @@ fn main() {
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next" href="December22/December22.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="January23/January23.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
