--- a/print.html
+++ b/print.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-30-22.html"><strong aria-hidden="true">1.4.</strong> Friday, December 30, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-31-22.html"><strong aria-hidden="true">1.5.</strong> Saturday, December 31, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="January23/January23.html"><strong aria-hidden="true">1.</strong> January 2023</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="January23/1-1-23.html"><strong aria-hidden="true">1.1.</strong> Sunday, January 1, 2023</a></li></ol></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">2.</strong> December 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">2.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">2.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">2.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-30-22.html"><strong aria-hidden="true">2.4.</strong> Friday, December 30, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-31-22.html"><strong aria-hidden="true">2.5.</strong> Saturday, December 31, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -154,6 +154,14 @@ fn main() {
         println!(&quot;{output}&quot;);
     }
 }</code></pre></pre>
+<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h3 id="research"><a class="header" href="#research">research</a></h3>
+<ul>
+<li>general eth related docs
+<ul>
+<li><a href="https://pintail.xyz/">https://pintail.xyz/</a></li>
+</ul>
+</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><ul>
 <li>SOV compendium list of tools - <a href="https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b">https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b</a></li>
 <li>Blockworks research Dune Eth metrics - <a href="https://dune.com/blockworks_research/eth">https://dune.com/blockworks_research/eth</a></li>
